<resources>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <string name="app_name">Yournal</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>


    <string name="email">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nrp">NRP</string>
    <string name="branch">Branch</string>
    <string name="area">Area</string>

    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="account">Create Account</string>

    <string name="add">Add Journal</string>
    <string name="delete">Delete</string>
    <string name="codejob">Code Job</string>
    <string name="category">Category</string>
    <string name="codecat">Code Category</string>
    <string name="activity">Activity</string>
    <string name="description">Description</string>
    <string name="sapsomp">SAP SOMP</string>
    <string name="month">Month</string>
    <string name="start">Start Date</string>
    <string name="end">End Date</string>
    <string name="hours">Hours</string>
    <string name="venue">Venue</string>
    <string name="vendor">Vendor</string>
    <string name="unittype">Unit Type</string>
    <string name="remark">Remark</string>
    <string name="filename">File Name</string>
    <string name="download">Download</string>

    <string-array name="month">
        <item></item>
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>

    <string-array name="venue">
        <item></item>
        <item>TTA BLP</item>
        <item>TTA JKT</item>
        <item>TTA SBY</item>
        <item>TTA SMG</item>
        <item>TTA SMD</item>
    </string-array>

    <string-array name="vendor">
        <item></item>
        <item>UT BLP</item>
        <item>UT HO</item>
        <item>UT KWN</item>
    </string-array>
    <string name="title_activity_coba">CobaActivity</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need registered Email ID to sent your password resetinstruction</string>
    <string name="hint_email">Your email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">&#8810; Back</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
