<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.sch.smktelkom_mlg.pw.utjournal.EditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="UnusedAttribute" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="344dp"
            android:layout_height="390dp"
            android:layout_marginBottom="132dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp">

            <TextView
                android:id="@+id/edtactivity1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:hint="@string/activity"
                android:inputType="textMultiLine"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/edtcodejob1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtactivity1"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/codejob"
                android:textColor="@android:color/background_dark"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/dash1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edtcodejob1"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/edtcodejob1"
                android:text="-"
                android:textColor="@android:color/background_dark"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/edtcodejob1" />

            <TextView
                android:id="@+id/edtcodecat1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/dash1"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/dash1"
                android:hint="@string/codecat"
                android:textColor="@android:color/background_dark"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/dash1" />

            <TextView
                android:id="@+id/dash2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edtcodecat1"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/edtcodecat1"
                android:text="-"
                android:textColor="@android:color/background_dark"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/edtcodecat1" />

            <TextView
                android:id="@+id/edtcategory1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/dash2"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/dash2"
                android:hint="@string/category"
                android:textColor="@android:color/background_dark"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/dash2" />

            <TextView
                android:id="@+id/edtdescription1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtsapsomp1"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/description"
                android:textColor="@android:color/background_dark"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/edtsapsomp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtVenue1"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/sapsomp"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/edtstart1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtcodejob1"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/start"
                android:textColor="@android:color/background_dark"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/dash3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edtstart1"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/edtstart1"
                android:text="-"
                android:textColor="@android:color/background_dark"
                android:layout_toEndOf="@+id/edtstart1"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/edtend1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/dash3"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/dash3"
                android:hint="@string/end"
                android:textColor="@android:color/background_dark"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/dash3" />

            <TextView
                android:id="@+id/dash4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edtend1"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/edtend1"
                android:text="-"
                android:textColor="@android:color/background_dark"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/edtend1" />

            <TextView
                android:id="@+id/edMonth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/dash4"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/dash4"
                android:hint="@string/month"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/dash5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edMonth1"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/edMonth1"
                android:text="-"
                android:textColor="@android:color/background_dark"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/edMonth1" />

            <TextView
                android:id="@+id/edthours1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/dash5"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/dash5"
                android:hint="@string/hours"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/edtVenue1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtstart1"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/venue"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/dash6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edtVenue1"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/edtVenue1"
                android:text="-"
                android:textColor="@android:color/background_dark"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/edtVenue1" />

            <TextView
                android:id="@+id/edtVendor1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/dash6"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_toRightOf="@+id/dash6"
                android:hint="@string/vendor"
                android:textColor="@android:color/background_dark"
                android:layout_toEndOf="@+id/dash6" />

            <TextView
                android:id="@+id/dash7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edtVendor1"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/edtVendor1"
                android:text="-"
                android:textColor="@android:color/background_dark"
                android:layout_toEndOf="@+id/edtVendor1"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/edtunit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/dash7"
                android:layout_alignBottom="@+id/dash7"
                android:layout_toLeftOf="@+id/edtcategory1"
                android:layout_toStartOf="@+id/edtcategory1"
                android:hint="@string/unittype"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/edtremark1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtdescription1"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/remark"
                android:inputType="textMultiLine"
                android:textColor="@android:color/background_dark"
                android:layout_marginStart="8dp" />

            <Button
                android:id="@+id/btnDelete1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="24dp"
                android:background="@drawable/buttonstyle"
                android:text="@string/delete"
                android:textColor="#fff"
                android:layout_marginEnd="24dp"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
